# MCPP

./: CMakeLists.txt  README.md  imgui.ini
assets/shaders/: default.frag  default.vert  outline.frag  outline.vert
include/glad/: glad.h
src/: glad.c  main.cpp
src/player/: Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  UI.cpp  UI.h
src/window/: Program.cpp  Program.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  VAO.cpp  VAO.h
src/world/: BlockData.hpp  Chunk.cpp  Chunk.h  ChunkGenerator.cpp  ChunkGenerator.h
